# CMakeezer

./: .gitignore  .gitmodules
libs/: CMakeezer.bat  CMakeezer.sh
libs/YourProjectStartHere/: CMakeLists.txt  benchmark_ut.cpp
libs/YourProjectStartHere/src/: Metal.cpp
